<resources>
    <string name="app_name">KoncertjegyShop</string>
    <string name="name">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="email">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Számlázási cím</string>
    <string name="description">Leírás:</string>
    <string-array name="phone_modes">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>

    <string-array name="concert_names">
        <item>Belga</item>
        <item>Beton.Hofi</item>
        <item>Byealex és a slepp</item>
        <item>BSW</item>
        <item>Wellhello</item>
        <item>Timmy Trumper</item>
        <item>Alan Walker</item>
        <item>Azahriah</item>
    </string-array>

    <string-array name="concert_prices">
        <item>8.000 Ft</item>
        <item>12.000 Ft</item>
        <item>6.500 Ft</item>
        <item>9.500 Ft</item>
        <item>7.000 Ft</item>
        <item>14.500 Ft</item>
        <item>12.500 Ft</item>
        <item>9.000 Ft</item>
    </string-array>

    <string-array name="concert_locations">
        <item>Budapest, Park</item>
        <item>Papp László Aréna</item>
        <item>Müpa Budapest</item>
        <item>Budapest Sportaréna</item>
        <item>Liszt Ferenc Koncertközpont</item>
        <item>Budapest Kongresszusi Központ</item>
        <item>BMC – Budapest Music Center</item>
        <item>Margitszigeti Szabadtéri Színpad</item>

    </string-array>

    <string-array name="concert_dates">
        <item>2025.08.15.</item>
        <item>2025.09.20.</item>
        <item>2025.07.10.</item>
        <item>2025.10.05.</item>
        <item>2025.11.18.</item>
        <item>2025.06.15.</item>
        <item>2025.07.03.</item>
        <item>2025.08.21.</item>
    </string-array>

    <array name="concert_images">
        <item>@drawable/belga</item>
        <item>@drawable/betonhofi</item>
        <item>@drawable/byealexesaslepp</item>
        <item>@drawable/bsw</item>
        <item>@drawable/wellhello</item>
        <item>@drawable/timmy</item>
        <item>@drawable/alan</item>
        <item>@drawable/azahriah</item>
    </array>
</resources>